// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Agent prompts agentsPrompt should generate agents documentation 1`] = `
"
====

AVAILABLE AGENTS

The following agents are available for task handover:

- **TestAgent**
  - Responsibilities:
    - Test responsibility 1
    - Test responsibility 2

- **AnotherAgent**
  - Responsibilities:
    - Another responsibility

- **Current Agent Role**
  You are currently acting as **CurrentAgent**. If you identify the task is beyond your current scope, use the handover tool to transition to the other agent. Include sufficient context so the new agent can seamlessly continue the work.
"
`;

exports[`Agent prompts agentsPrompt should include current agent name 1`] = `
"
====

AVAILABLE AGENTS

The following agents are available for task handover:

- **TestAgent**
  - Responsibilities:
    - Test responsibility

- **Current Agent Role**
  You are currently acting as **CurrentAgent**. If you identify the task is beyond your current scope, use the handover tool to transition to the other agent. Include sufficient context so the new agent can seamlessly continue the work.
"
`;

exports[`Agent prompts responsePrompts errorInvokeTool should format error message 1`] = `"An error occurred while invoking the tool "test_tool": Test error"`;

exports[`Agent prompts responsePrompts requireUseTool should return error message 1`] = `"Error: You must use a tool before proceeding. Making sure the tool is invoked using xml tags."`;

exports[`Agent prompts responsePrompts toolResults should format tool results 1`] = `
"<tool_response>
<tool_name>test_tool</tool_name>
<tool_result>
Test result
</tool_result>
</tool_response>"
`;
